[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/player/weapons/player_laser.gd" type="Script" id=1]
[ext_resource path="res://game/assets/lasers_green.png" type="Texture" id=2]
[ext_resource path="res://game/assets/tilesets/explosion.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.44998
height = 40.2

[sub_resource type="Animation" id=3]
resource_name = "explosion"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 7, 0 ]
}

[node name="PlayerLaser" type="KinematicBody2D"]
position = Vector2( 0.173996, 0.203163 )
script = ExtResource( 1 )

[node name="LaserSprite" type="Sprite" parent="."]
position = Vector2( -0.353554, 0 )
scale = Vector2( 0.985858, 1 )
texture = ExtResource( 2 )
offset = Vector2( 0, -50 )
hframes = 10

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -0.125, -49.375 )

[node name="Left" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.126259, 0.051775 )
shape = SubResource( 1 )

[node name="Explosion" type="Sprite" parent="."]
position = Vector2( -0.370087, -49.406 )
scale = Vector2( 1.24026, 1.1913 )
texture = ExtResource( 3 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explosion = SubResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
